--- a/bespoke-dataset-viewer/app/globals.css
+++ b/bespoke-dataset-viewer/app/globals.css
@@ -35,7 +35,7 @@ body {
     --radius: 0.5rem;
     --success: 142 40% 75%;
     --tooltip-bg: white;
-    --tooltip-text-bg: black;
+    --tooltip-text-bg: rgb(255, 255, 255);
     --tooltip-text: black;
     --border: #ccc;
   }
