--- a/examples/custom/viewer/templates/index.html
+++ b/examples/custom/viewer/templates/index.html
@@ -64,6 +64,10 @@
                             </h5>
                             <p class="card-text">Number of Requests: {{ model_data.num_requests }}</p>
                             <p class="card-text">Language: {{ model_data.language }}</p>
+                            <p class="card-text">
+                                Created: 
+                                {{ model_data.creation_ts | datetimeformat }}
+                            </p>
                             <a href="{{ url_for('model_details', model_name=model_key) }}" class="btn btn-primary">View Details</a>
                         </div>
                     </div>
